<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@color/blue"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/img_1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textAlignment="center"
        android:hint="@string/welUser"
        android:textSize="22dp"
        android:textColorHint="@color/white"
        />
    <EditText
        android:id="@+id/edtUser"
        android:hint="@string/edtUser"
        android:drawableStart="@drawable/ic_baseline"
        android:layout_width="350dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:hint="@string/edtPass"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_lock"
        android:id="@+id/edtPass"
        android:layout_width="350dp"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="350dp"
        android:layout_margin="20dp"
        android:text="@string/loginButton"
        android:layout_height="wrap_content"/>


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:src="@drawable/img_4" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:src="@drawable/img_3" />


</LinearLayout>